{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 1449,
  "lineage": "a80e8f7f-c28f-8b02-f2a8-5b7db8b0803c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:864899849560:internet-gateway/igw-0c0801ec72788f793",
            "id": "igw-0c0801ec72788f793",
            "owner_id": "864899849560",
            "vpc_id": "vpc-085f6bda30dbc2e07"
          },
          "dependencies": [
            "aws_vpc.craftcms_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "craftcms_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "my-alb-access-logs-bucket",
                "enabled": true,
                "prefix": "alb-logs"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ca-central-1:864899849560:loadbalancer/app/craftcms-lb/ea3279f7cd331fe1",
            "arn_suffix": "app/craftcms-lb/ea3279f7cd331fe1",
            "desync_mitigation_mode": "defensive",
            "dns_name": "craftcms-lb-805248349.ca-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ca-central-1:864899849560:loadbalancer/app/craftcms-lb/ea3279f7cd331fe1",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "craftcms-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0d16b5f06b98ae2ce"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0f7c275102508d42f"
              },
              {
                "subnet_id": "subnet-0f7ffb8aed38cc32d"
              }
            ],
            "subnets": [
              "subnet-0f7c275102508d42f",
              "subnet-0f7ffb8aed38cc32d"
            ],
            "vpc_id": "vpc-085f6bda30dbc2e07",
            "xff_header_processing_mode": "append",
            "zone_id": "ZQSVJUPU6J1EY"
          },
          "dependencies": [
            "aws_s3_bucket.alb_access_logs",
            "aws_security_group.load_balancer_sg",
            "aws_subnet.public_subnet",
            "aws_vpc.craftcms_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "craftcms_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ca-central-1:864899849560:listener/app/craftcms-lb/ea3279f7cd331fe1/08bc3b0bf23ea2d1",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ca-central-1:864899849560:targetgroup/craftcms-tg/40310df3a21a1394",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ca-central-1:864899849560:listener/app/craftcms-lb/ea3279f7cd331fe1/08bc3b0bf23ea2d1",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ca-central-1:864899849560:loadbalancer/app/craftcms-lb/ea3279f7cd331fe1",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.craftcms_lb",
            "aws_lb_target_group.craftcms_target_group",
            "aws_s3_bucket.alb_access_logs",
            "aws_security_group.load_balancer_sg",
            "aws_subnet.public_subnet",
            "aws_vpc.craftcms_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "craftcms_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ca-central-1:864899849560:targetgroup/craftcms-tg/40310df3a21a1394",
            "arn_suffix": "targetgroup/craftcms-tg/40310df3a21a1394",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/landing.php",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ca-central-1:864899849560:targetgroup/craftcms-tg/40310df3a21a1394",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "craftcms-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-085f6bda30dbc2e07"
          },
          "dependencies": [
            "aws_vpc.craftcms_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:864899849560:route-table/rtb-041876135ce7d7bc1",
            "id": "rtb-041876135ce7d7bc1",
            "owner_id": "864899849560",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c0801ec72788f793",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-085f6bda30dbc2e07"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.craftcms_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0124fccab28f54b18",
            "route_table_id": "rtb-041876135ce7d7bc1",
            "subnet_id": "subnet-0f7c275102508d42f"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_route",
            "aws_subnet.public_subnet",
            "aws_vpc.craftcms_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02269433287d0c50f",
            "route_table_id": "rtb-041876135ce7d7bc1",
            "subnet_id": "subnet-0f7ffb8aed38cc32d"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_route",
            "aws_subnet.public_subnet",
            "aws_vpc.craftcms_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "aurora_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:864899849560:security-group/sg-0090ad9777b060323",
            "description": "Allow ECS tasks to access Aurora PostgreSQL",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0090ad9777b060323",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02c831e55e5ba8443"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "aurora-sg",
            "name_prefix": "",
            "owner_id": "864899849560",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-085f6bda30dbc2e07"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.craftcms_sg",
            "aws_vpc.craftcms_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "craftcms_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:864899849560:security-group/sg-02c831e55e5ba8443",
            "description": "Allow HTTP inbound traffic from the load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02c831e55e5ba8443",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "craftcms-sg",
            "name_prefix": "",
            "owner_id": "864899849560",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-085f6bda30dbc2e07"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.craftcms_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "load_balancer_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:864899849560:security-group/sg-0d16b5f06b98ae2ce",
            "description": "Allow HTTP traffic to the load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d16b5f06b98ae2ce",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "craftcms-lb-sg",
            "name_prefix": "",
            "owner_id": "864899849560",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-085f6bda30dbc2e07"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.craftcms_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ecs_inbound_from_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 80,
            "id": "sgrule-3374203571",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-02c831e55e5ba8443",
            "security_group_rule_id": "sgr-079b6a43acff68d0e",
            "self": false,
            "source_security_group_id": "sg-0d16b5f06b98ae2ce",
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.craftcms_sg",
            "aws_security_group.load_balancer_sg",
            "aws_vpc.craftcms_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:864899849560:subnet/subnet-0f7c275102508d42f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f7c275102508d42f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "864899849560",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-085f6bda30dbc2e07"
          },
          "dependencies": [
            "aws_vpc.craftcms_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:864899849560:subnet/subnet-0f7ffb8aed38cc32d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1b",
            "availability_zone_id": "cac1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f7ffb8aed38cc32d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "864899849560",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-085f6bda30dbc2e07"
          },
          "dependencies": [
            "aws_vpc.craftcms_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "craftcms_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:864899849560:vpc/vpc-085f6bda30dbc2e07",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ee78d5b46b2df1ee",
            "default_route_table_id": "rtb-0e1e2f7f1352abb00",
            "default_security_group_id": "sg-050c0beb8ca1c0050",
            "dhcp_options_id": "dopt-0233d0f7f4479ff0c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-085f6bda30dbc2e07",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e1e2f7f1352abb00",
            "owner_id": "864899849560"
          }
        }
      ]
    }
  ]
}